--- a/Index.html
+++ b/Index.html
@@ -53,7 +53,7 @@
         <br>
         <div class="details" id="carreer">
           <details>
-            <Summary>carreer</Summary>
+            <Summary>Career</Summary>
             <p >
               Kazi Nazrul Islam joined the army in late 1917. Nazrul left the British Indian army in 1920 when the 49th Bengal Regiment was disbanded. and settled in Calcutta. He joined the staff of the Bangiya Mussalman Sahitya Samiti ("Bengali Muslim Literary Society"). He published his first novel Bandhan-hara (বাঁধন-হারা, 'Freedom from Bondage') in 1920, on which he continued to work over the next seven years. His first collection of poems, which included "Bodhan", "Shat-il-Arab", "Kheya-parer Tarani", and "Badal Prater Sharab", received critical acclaim.
               <br>
